css/style.css
/* ... */
.navbar-brand img {
  width: 45px;
}

.navbar-brand,
.navbar-brand:hover {
  color: #000000;
  font-size: 30px;
  font-weight: 600;
  text-transform: uppercase;
}

.custom_nav-container {
  z-index: 99999;
  padding: 15px 0;
}

.custom_nav-container .navbar-toggler {
  outline: none;
}

.custom_nav-container .navbar-toggler .navbar-toggler-icon {
  background-image: url(../images/menu.png);
  background-size: 55px;
}

/*end header section*/
.slider_section {
  margin-top: -75px;
}

.slider_section .row {
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.slider_section .detail-box h1 {
  font-size: 4rem;
  font-weight: bold;
}

.slider_section .detail-box p {
  margin: 15px 0;
}

.slider_section .detail-box a {
  display: inline-block;
  padding: 10px 45px;
  background-color: #fb1004;
  color: #ffffff;
  border-radius: 0;
  margin-top: 15px;
}

.slider_section .detail-box a:hover {
  background-color: #b00b03;
  color: #ffffff;
}

.slider_section .img-box img {
  width: 100%;
}

.slider_section .carousel-control-prev,
.slider_section .carousel-control-next {
  position: absolute;
  left: 2.5%;
  width: 45px;
  height: 45px;
  border: none;
  top: 47%;
}

.slider_section .carousel-control-prev {
  -webkit-transform: translate(-50%, 55px);
          transform: translate(-50%, 55px);
}

.carousel-control-prev,
.carousel-control-next {
  background-color: #0304048c;
  background-repeat: no-repeat;
  background-size: 10px;
  background-position: center;
  opacity: 1;
  border-radius: 7px;
}

.carousel-control-prev:hover,
.carousel-control-next:hover {
  background-color: #fb1004;
}

.carousel-control-prev {
  background-image: url(../images/left-arrow-black.png);
}

.carousel-control-prev:hover {
  background-image: url(../images/left-arrow-white.png);
}

.carousel-control-next {
  background-image: url(../images/right-arrow-black.png);
}

.carousel-control-next:hover {
  background-image: url(../images/right-arrow-white.png);
}

.menu_fixed-position {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 99999999999999999999999999;
}

.custom_menu-container {
  background-color: #030404c0;
}

.custom_menu-container .custom_menu {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.custom_menu-container .custom_menu .navbar-nav {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
}

.custom_menu-container .custom_menu .navbar-nav .nav-link {
  padding: 15px 30px;
  color: #ffffff;
  text-align: center;
  font-weight: bold;
}

.custom_menu-container .custom_menu .user_option {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: end;
      -ms-flex-align: end;
          align-items: flex-end;
}

.custom_menu-container .custom_menu .user_option .login_btn-container a {
  display: inline-block;
  padding: 15px 30px;
  color: #ffffff;
  text-align: center;
}

.custom_menu-container .nav_search-btn {
  background-image: url(../images/search-icon.png);
}

.about_section .row {
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.about_section .img-box img {
  width: 100%;
}

.about_section .detail-box p {
  margin-top: 25px;
}

.about_section .detail-box a {
  display: inline-block;
  padding: 12px 45px;
  background-color: #fb1004;
  color: #ffffff;
  border-radius: 10px;
  margin-top: 25px;
}

.about_section .detail-box a:hover {
  background-color: #b00b03;
  color: #ffffff;
}

.do_section .content-box {
  color: #ffffff;
  text-align: center;
  padding: 10px 15px;
  border-radius: 15px;
  margin: 25px 0;
}

.do_section .content-box img {
  height: 70px;
  margin: 15px;
}

.do_section .content-box.bg-red {
  background-color: #fb1004;
}

.do_section .content-box.bg-green {
  background-color: #0304048c;
}

.skill_section {
  background-image: url(../images/skill-bg.jpg);
  background-size: cover;
  background-repeat: no-repeat;
}

.skill_section .row .col-md-3 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  text-align: center;
  color: #ffffff;
  margin: 25px 0;
}

.skill_section .row .col-md-3 h6 {
  font-weight: bold;
  margin-top: 20px;
  font-size: 18px;
}

.skill_section .skill_padding {
  padding: 75px 0;
}

.skill_section .custom_heading-container {
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          justify-content: flex-end;
}

.skill_section .custom_heading-container h2 {
  color: #ffffff;
}

.skill_section .custom_heading-container h2::before, .skill_section .custom_heading-container h2::after {
  background-color: #ffffff;
}

.skill_section .progress_text {
  font-size: 24px !important;
  color: #ffffff;
  font-weight: bold;
}

.portfolio_section .row .col-md-6 {
  margin: 45px 0;
}

.portfolio_section .box {
  position: relative;
  border-radius: 10px;
  overflow: hidden;
}

.portfolio_section .box.b-1, .portfolio_section .box.b-4 {
  margin-bottom: 20px;
}

.portfolio_section .box img {
  width: 100%;
}

.portfolio_section .box h4 {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  width: 100%;
  text-align: center;
  color: #ffffff;
  font-weight: bold;
  font-size: 28px;
  -webkit-filter: drop-shadow(8px 3px 8px #000000);
          filter: drop-shadow(8px 3px 8px #000000);
}

.client_section .custom_heading-container {
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}
/* ... */

